feat: adding project colors

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=styles.css.map */
+* {
+  font-family: "Space Grotesk", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  box-sizing: border-box;
+}/*# sourceMappingURL=styles.css.map */
