--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -1,3 +1,15 @@
+// Project colors
+$white: hsl(0, 0%, 100%);
+$light-grayish-violet: hsl(270, 3%, 87%);
+$dark-grayish-violet: hsl(279, 6%, 55%);
+$dark-violet: hsl(278, 68%, 11%);
+
+// Global mixins
+@mixin background-image($url, $covering) {
+  background: $url;
+  background-size: $covering;
+}
+
 // Global styling
 * {
   font-family: 'Space Grotesk', sans-serif;
