--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,75 @@
 * {
+  margin: 0;
+  padding: 0;
   font-family: "Space Grotesk", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
   box-sizing: border-box;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: auto;
+  align-items: auto;
+}
+.container .card-shape {
+  width: 40%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 0.6rem;
+  background: url(../images/bg-main-desktop.png) no-repeat;
+  background-size: cover;
+}
+.container .card-shape .card-front {
+  background: url(../images/bg-card-front.png) no-repeat;
+  background-size: cover;
+  color: hsl(0, 0%, 100%);
+  position: relative;
+  left: 18rem;
+  margin-bottom: 2.1rem;
+  padding: 27px 33px;
+  height: 15rem;
+  width: 58.5%;
+  border-radius: 10px;
+}
+.container .card-shape .card-front .card-logo {
+  padding-bottom: 3.5rem;
+}
+.container .card-shape .card-front .card-number {
+  display: flex;
+  gap: 1rem;
+  font-size: 31.5px;
+  padding-bottom: 1.5rem;
+}
+.container .card-shape .card-front .card-name-exp {
+  display: flex;
+  justify-content: space-between;
+  font-size: 15px;
+}
+.container .card-shape .card-back {
+  background: url(../images/bg-card-back.png) no-repeat;
+  background-size: cover;
+  color: hsl(0, 0%, 100%);
+  position: relative;
+  left: 24rem;
+  height: 15rem;
+  width: 58.5%;
+  border-radius: 10px;
+  box-shadow: 10px;
+}
+.container .card-shape .card-back .cvc {
+  position: relative;
+  top: 46%;
+  left: 80%;
 }/*# sourceMappingURL=styles.css.map */
