--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,11 +5,12 @@
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
+  letter-spacing: 2px;
   box-sizing: border-box;
 }
 
 body {
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
 }
 
@@ -21,13 +22,9 @@ body {
   align-items: auto;
 }
 .container .card-shape {
-  width: 40%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 0.6rem;
+  width: 33.5%;
+  height: 100%;
+  position: relative;
   background: url(../images/bg-main-desktop.png) no-repeat;
   background-size: cover;
 }
@@ -35,41 +32,122 @@ body {
   background: url(../images/bg-card-front.png) no-repeat;
   background-size: cover;
   color: hsl(0, 0%, 100%);
-  position: relative;
-  left: 18rem;
-  margin-bottom: 2.1rem;
+  position: absolute;
+  right: -8rem;
+  top: 11.7rem;
   padding: 27px 33px;
-  height: 15rem;
-  width: 58.5%;
+  width: 28rem;
+  height: 15.3rem;
   border-radius: 10px;
 }
 .container .card-shape .card-front .card-logo {
-  padding-bottom: 3.5rem;
+  padding-bottom: 3.8rem;
 }
 .container .card-shape .card-front .card-number {
   display: flex;
-  gap: 1rem;
-  font-size: 31.5px;
-  padding-bottom: 1.5rem;
+  gap: 0.8rem;
+  font-size: 27.5px;
+  padding-bottom: 1.6rem;
+}
+.container .card-shape .card-front .card-number p {
+  letter-spacing: 3.3px;
 }
 .container .card-shape .card-front .card-name-exp {
   display: flex;
   justify-content: space-between;
-  font-size: 15px;
+  font-size: 14px;
+  letter-spacing: 2px;
 }
 .container .card-shape .card-back {
   background: url(../images/bg-card-back.png) no-repeat;
   background-size: cover;
   color: hsl(0, 0%, 100%);
-  position: relative;
-  left: 24rem;
-  height: 15rem;
-  width: 58.5%;
+  position: absolute;
+  top: 29.4rem;
+  right: -14rem;
+  height: 15.3rem;
+  width: 28rem;
   border-radius: 10px;
-  box-shadow: 10px;
 }
 .container .card-shape .card-back .cvc {
   position: relative;
-  top: 46%;
-  left: 80%;
+  top: 7rem;
+  right: -22.3rem;
+  font-size: 14px;
+}
+.container .card-details {
+  width: 66.5%;
+  height: 100%;
+  position: relative;
+}
+.container .card-details form {
+  width: 23.8em;
+  position: absolute;
+  top: 17.2rem;
+  right: 23.8%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+.container .card-details form .other-details {
+  display: flex;
+  gap: 1.2rem;
+  margin-bottom: 16px;
+}
+.container .card-details form .other-details .exp-date {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+.container .card-details form .other-details .exp-date label {
+  letter-spacing: 1.7px;
+}
+.container .card-details form .other-details .exp-date .exp-date-wrapper {
+  display: flex;
+  gap: 10px;
+}
+.container .card-details form .other-details .exp-date input {
+  width: 5rem;
+}
+.container .card-details form .other-details .cvc {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+.container .card-details form .cardname-holder,
+.container .card-details form .cardnumber-details {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.container .card-details form label {
+  font-size: 12px;
+  color: hsl(278, 68%, 11%);
+}
+.container .card-details form input {
+  height: 2.7rem;
+  padding: 17px;
+  border-radius: 7px;
+  border-width: 0.7px;
+  border-color: hsl(270, 3%, 87%);
+  border-style: groove;
+  font-size: 16px;
+  line-height: 10px;
+  letter-spacing: 1px;
+}
+.container .card-details form input[type=text]:focus {
+  outline: none;
+  box-shadow: 0 0 0 1px hsl(279, 6%, 55%);
+}
+.container .card-details form .confirming-btn button {
+  width: 100%;
+  padding: 15px;
+  border-radius: 10px;
+  border-color: hsl(278, 68%, 11%);
+  background-color: hsl(278, 68%, 11%);
+  color: hsl(0, 0%, 100%);
+  font-size: 17px;
+  letter-spacing: 0.7px;
+  cursor: pointer;
 }/*# sourceMappingURL=styles.css.map */
