--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -25,13 +25,14 @@ $dark-violet: hsl(278, 68%, 11%);
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
+  letter-spacing: 2px;
 
   box-sizing: border-box;
 }
 
 // Body styling
 body {
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
 }
 
@@ -40,18 +41,15 @@ body {
   width: 100%;
   height: 100%;
 
-  // background-color: aqua;
-
   @include flex-aligning(flex, auto);
+  // gap: 21.8rem;
 
   // The card preview and shape styling
   .card-shape {
-    width: 40%;
-    height: 100vh;
+    width: 33.5%;
+    height: 100%;
 
-    @include flex-aligning(flex, center);
-    flex-direction: column;
-    gap: 0.6rem;
+    position: relative;
 
     @include background-image(
       url(../images/bg-main-desktop.png) no-repeat,
@@ -67,35 +65,40 @@ body {
 
       color: $white;
 
-      position: relative;
-      left: 18rem;
+      position: absolute;
+      right: -8rem;
+      top: 11.7rem;
 
-      margin-bottom: 2.1rem;
       padding: 27px 33px;
 
-      height: 15rem;
-      width: 58.5%;
+      width: 28rem;
+      height: 15.3rem;
 
       border-radius: 10px;
 
       .card-logo {
-        padding-bottom: 3.5rem;
+        padding-bottom: 3.8rem;
       }
 
       .card-number {
         display: flex;
-        gap: 1rem;
+        gap: 0.8rem;
 
-        font-size: 31.5px;
+        font-size: 27.5px;
 
-        padding-bottom: 1.5rem;
+        padding-bottom: 1.6rem;
+
+        p {
+          letter-spacing: 3.3px;
+        }
       }
 
       .card-name-exp {
         display: flex;
         justify-content: space-between;
 
-        font-size: 15px;
+        font-size: 14px;
+        letter-spacing: 2px;
       }
     }
 
@@ -108,19 +111,126 @@ body {
 
       color: $white;
 
-      position: relative;
-      left: 24rem;
+      position: absolute;
+      top: 29.4rem;
+      right: -14rem;
 
-      height: 15rem;
-      width: 58.5%;
+      height: 15.3rem;
+      width: 28rem;
 
       border-radius: 10px;
-      box-shadow: 10px;
+      // box-shadow: 10px black;
 
       .cvc {
         position: relative;
-        top: 46%;
-        left: 80%;
+        top: 7rem;
+        right: -22.3rem;
+
+        font-size: 14px;
+      }
+    }
+  }
+
+  // Card details ( Card name holder & Card number & card CVC & EXP date )
+  .card-details {
+    width: 66.5%;
+    height: 100%;
+
+    position: relative;
+
+    form {
+      width: 23.8em;
+
+      position: absolute;
+      top: 17.2rem;
+      right: 23.8%;
+
+      display: flex;
+      flex-direction: column;
+      gap: 1.6rem;
+
+      .other-details {
+        display: flex;
+        gap: 1.2rem;
+
+        margin-bottom: 16px;
+
+        .exp-date {
+          display: flex;
+          flex-direction: column;
+          gap: 7px;
+
+          label {
+            letter-spacing: 1.7px;
+          }
+
+          .exp-date-wrapper {
+            display: flex;
+            gap: 10px;
+          }
+
+          input {
+            width: 5rem;
+          }
+        }
+
+        .cvc {
+          width: 30%;
+
+          display: flex;
+          flex-direction: column;
+          gap: 7px;
+        }
+      }
+
+      .cardname-holder,
+      .cardnumber-details {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+      }
+
+      label {
+        font-size: 12px;
+        color: $dark-violet;
+      }
+
+      input {
+        height: 2.7rem;
+
+        padding: 17px;
+
+        border-radius: 7px;
+        border-width: 0.7px;
+        border-color: $light-grayish-violet;
+        border-style: groove;
+
+        font-size: 16px;
+        line-height: 10px;
+        letter-spacing: 1px;
+      }
+
+      input[type='text']:focus {
+        outline: none;
+        box-shadow: 0 0 0 1px $dark-grayish-violet;
+      }
+
+      .confirming-btn {
+        button {
+          width: 100%;
+          padding: 15px;
+
+          border-radius: 10px;
+          border-color: $dark-violet;
+
+          background-color: $dark-violet;
+          color: $white;
+
+          font-size: 17px;
+          letter-spacing: 0.7px;
+
+          cursor: pointer;
+        }
       }
     }
   }
