--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -175,7 +175,7 @@ body {
         }
 
         .cvc {
-          width: 30%;
+          width: 12rem;
 
           display: flex;
           flex-direction: column;
